Enforce field length constraint in Forms for LineEdit and TextEdit

Field length constraint is enforced in forms when using either a
lineEdit or textEdit. Since SQLite has dynamic types and does not
enforce it, it is handled internally in Kexi.

BUG: 278295
FIXED-IN: 2.5 ALPHA 2
GUI: Field Length constraint is now enforced.
DIGEST: Field Length constraint is now enforced in Kexi.